--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
 							<h2>Аренда шоколадного фонтана</h2>
 						</header>
 						<div class="content">
-							<p><b><i>Уважаемые Дамы и Господа!</i></b></br>Наша компания <b><i>ChocoParty</i></b> рада предложить Вам оригинальный способ сделать Ваш праздник ещё более ярким и незабываемым
-							!</p>
-							<p>Что такое шоколадный фонтан?<br/><i><b>Шоколадный фонтан</b></i> - это настоящий фонтан, но вместо воды в нем циркулирует вкуснейший бельгийский шоколад. По принципу фондю Вы можете обмакивать в шоколаде кусочки различных фруктов, печенья, зефир и т.д.
-							<br/>Шоколадный фонтан украсит Вашу свадьбу, день рождения, корпоративную вечеринку, банкет, или другое торжество и оставит у Ваших гостей сладкие и незабываемые воспоминания о Вашем празднике.</p>
-							
-							<span class="image medium"><img src="images/logo.png" alt="Наш Логотип" width="50"></span>
+							<p>Компания <b><i>ChocoParty</i></b> рада предложить вам оригинальный способ сделать ваш праздник ещё более ярким и незабываемым!</p>
+							<p><strong>Что такое шоколадный фонтан?</strong></p>
+							<p><b>Шоколадный фонтан</b> — это настоящий фонтан, в котором вместо воды циркулирует вкуснейший бельгийский шоколад. По принципу фондю вы можете обмакивать в шоколад кусочки свежих фруктов, печенье, зефир и другие сладости.</p>
+							<p>Шоколадный фонтан станет эффектным украшением вашей свадьбы, дня рождения, корпоративной вечеринки, банкета или любого другого торжества, а также подарит вашим гостям сладкие и по-настоящему незабываемые впечатления о празднике.</p>
 						</div>
 					</section>
 
@@ -81,14 +79,14 @@
 						<h2>Наши услуги</h2>
 					</header>
 					<div class="content">
-						<p><strong>В наши услуги входит:</strong></p>
+						<p><strong>В стоимость входит:</strong></p>
 						<div class="content">
 							<ul>
-								<li>доставка, сборка</li>
-								<li>профессиональное обслуживание</li>
+								<li>доставка и сборка оборудования</li>
 								<li>украшение стола и нарезка фруктов</li>
-								<li>салфетки, шпажки, посуда</li>
+								<li>салфетки, шпажки и посуда</li>
 							</ul>
+							<p style="font-size: 0.8em;"><i>Профессиональное обслуживание предоставляется за дополнительную плату.</i></p>
 						<div class="gallery">
 							<a href="images/gallery/fulls/fontan4.jpg" class="landscape"><img src="images/gallery/thumbs/fontan4.jpg" alt="" /></a>
 							<a href="images/gallery/fulls/fontan29.jpg" class="portrait"><img src="images/gallery/fulls/fontan29.jpg" alt="" /></a>
@@ -117,7 +115,7 @@
 								<div class="field half">
 									<input type="radio" value="tarif-optima-small" id="tarif-optima-small" name="tarif-small" onclick="updateCostSmall()">
 									<label for="tarif-optima-small">
-										<b>Оптима</b>
+										<b>Optima</b>
 										<br>&#x2022;  2.5 килограмм лучшего бельгийского шоколада
 										<br>&#x2022;  0.25 кг бельгийского какао масла
 									</label>
@@ -133,6 +131,14 @@
 										<br>&#x2022;  2.5 кг сезонных фруктов
 										<br>&#x2022;  1 кг клубники
 										<br>&#x2022;  красивая нарезка фруктов
+									</label>
+								</div>
+								<div class="field half">
+									<input type="radio" value="tarif-light-small" id="tarif-light-small" name="tarif-small" onclick="updateCostSmall()">
+									<label for="tarif-light-small">
+										<b>Light</b>
+										<br>&#x2022;  Только аренда фонтана
+										<br>&#x2022;  Без наполнения
 									</label>
 								</div>
 							</div>
@@ -182,7 +188,7 @@
 								<div class="field half">
 									<input type="radio" value="tarif-optima" id="tarif-optima" name="tarif" onclick="updateCostBig()">
 									<label for="tarif-optima">
-										<b>Оптима</b>
+										<b>Optima</b>
 										<br>&#x2022;  5 кг лучшего бельгийского шоколада
 										<br>&#x2022;  0.5 кг бельгийского какао масла
 									</label>
@@ -198,6 +204,14 @@
 										<br>&#x2022;  5 кг сезонных фруктов
 										<br>&#x2022;  2 кг клубники
 										<br>&#x2022;  красивая нарезка фруктов
+									</label>
+								</div>
+								<div class="field half">
+									<input type="radio" value="tarif-light" id="tarif-light" name="tarif" onclick="updateCostBig()">
+									<label for="tarif-light">
+										<b>Light</b>
+										<br>&#x2022;  Только аренда фонтана
+										<br>&#x2022;  Без наполнения
 									</label>
 								</div>
 							</div>
@@ -264,6 +278,14 @@
 										<br>&#x2022;  8 кг сезонных фруктов
 										<br>&#x2022;  3.5 кг клубники
 										<br>&#x2022;  красивая нарезка фруктов
+									</label>
+								</div>
+								<div class="field half">
+									<input type="radio" value="tarif-light-extra" id="tarif-light-extra" name="tarif-extra" onclick="updateCostXBig()">
+									<label for="tarif-light-extra">
+										<b>Light</b>
+										<br>&#x2022;  Только аренда фонтана
+										<br>&#x2022;  Без наполнения
 									</label>
 								</div>
 							</div>
@@ -379,20 +401,25 @@
 						break;
 					}
 				}
-				for(i = 0; i < choco_type.length; i++) {
-					if(choco_type[i].checked){
-						chosen_choco = choco_type[i].value;
-						break;
-					}
-				}
-				if(chosen_tarif=="tarif-maxima"){
+				if(chosen_tarif=="tarif-light"){
 					cost = 1000000
 				}
-				if(chosen_choco=="milk"){
-					cost += 2900000
-				}
-				else if(chosen_choco=="white" || chosen_choco=="orange" || chosen_choco=="strawberry" || chosen_choco=="lime"){
-					cost += 3200000
+				else {
+					for(i = 0; i < choco_type.length; i++) {
+						if(choco_type[i].checked){
+							chosen_choco = choco_type[i].value;
+							break;
+						}
+					}
+					if(chosen_tarif=="tarif-maxima"){
+						cost = 1000000
+					}
+					if(chosen_choco=="milk"){
+						cost += 2900000
+					}
+					else if(chosen_choco=="white" || chosen_choco=="orange" || chosen_choco=="strawberry" || chosen_choco=="lime"){
+						cost += 3200000
+					}
 				}
 
 				document.getElementById("cost-big").innerHTML
@@ -411,20 +438,25 @@
 						break;
 					}
 				}
-				for(i = 0; i < choco_type.length; i++) {
-					if(choco_type[i].checked){
-						chosen_choco = choco_type[i].value;
-						break;
+				if(chosen_tarif=="tarif-light-extra"){
+					cost = 1500000
+				}
+				else {
+					for(i = 0; i < choco_type.length; i++) {
+						if(choco_type[i].checked){
+							chosen_choco = choco_type[i].value;
+							break;
+						}
 					}
-				}
-				if(chosen_tarif=="tarif-maxima-extra"){
-					cost = 1600000
-				}
-				if(chosen_choco=="milk-extra"){
-					cost += 4600000
-				}
-				else if(chosen_choco=="white-extra" || chosen_choco=="orange-extra" || chosen_choco=="strawberry-extra" || chosen_choco=="lime-extra"){
-					cost += 5100000
+					if(chosen_tarif=="tarif-maxima-extra"){
+						cost = 1600000
+					}
+					if(chosen_choco=="milk-extra"){
+						cost += 4600000
+					}
+					else if(chosen_choco=="white-extra" || chosen_choco=="orange-extra" || chosen_choco=="strawberry-extra" || chosen_choco=="lime-extra"){
+						cost += 5100000
+					}
 				}
 
 				document.getElementById("cost-extra-big").innerHTML
@@ -443,20 +475,25 @@
 						break;
 					}
 				}
-				for(i = 0; i < choco_type.length; i++) {
-					if(choco_type[i].checked){
-						chosen_choco = choco_type[i].value;
-						break;
+				if(chosen_tarif=="tarif-light-small"){
+					cost = 500000
+				}
+				else {
+					for(i = 0; i < choco_type.length; i++) {
+						if(choco_type[i].checked){
+							chosen_choco = choco_type[i].value;
+							break;
+						}
 					}
-				}
-				if(chosen_tarif=="tarif-maxima-small"){
-					cost = 1000000
-				}
-				if(chosen_choco=="milk-small"){
-					cost += 1500000
-				}
-				else if(chosen_choco=="white-small" || chosen_choco=="orange-small" || chosen_choco=="strawberry-small" || chosen_choco=="lime-small"){
-					cost += 1700000
+					if(chosen_tarif=="tarif-maxima-small"){
+						cost = 1000000
+					}
+					if(chosen_choco=="milk-small"){
+						cost += 1500000
+					}
+					else if(chosen_choco=="white-small" || chosen_choco=="orange-small" || chosen_choco=="strawberry-small" || chosen_choco=="lime-small"){
+						cost += 1700000
+					}
 				}
 
 				document.getElementById("cost-small").innerHTML
